# 2025-08-30-langchain

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: langchain-class.mdc  langchain.mdc
lesson1/: lesson1_2.ipynb  python_variables_math.md
lesson2/: lesson2_1.ipynb  lesson2_2.ipynb  lesson2_4.ipynb  條件判斷和條件.md
lesson3/: lesson3_1.ipynb  lesson3_2.ipynb
lesson4/: AGENTS.md  lesson4_1.ipynb  lesson4_2.py
lesson5/: lesson5_1.ipynb  lesson5_5.ipynb  lesson5_6.ipynb  lesson5_7.py
lesson6/: lesson6_1.ipynb  lesson6_2.ipynb  lesson6_3.ipynb  lesson6_5.ipynb  lesson6_6.ipynb
lesson7/: lesson7_1.ipynb  lesson7_2.ipynb  lesson7_3.ipynb  lesson7_4.ipynb
lesson7/db/chroma_db_v3/: chroma.sqlite3
lesson7/db/chroma_db_with_metadata_chinese_nb/: chroma.sqlite3
