[project]
name = "2025-08-30-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-google-genai",
    "python-dotenv>=1.1.1",
]
